# kyo-rs

./: Cargo.toml  README.md  build.rs
resources/: index.css  index.html  index.js
resources/img/: background.jpg.base64
src/: cert.rs  hosts.rs  main.rs
src/platform_utils/: mod.rs  nix.rs  win32.rs
