#
# kyo-rs - Rust rewrite of kyo, a modern osu! server switcher
# Copyright (C) 2018 Marc3842h
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published
# by the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
#

[package]
name = "kyo-rs"
version = "0.0.1"
authors = [ "Marc3842h <info@marcsteiner.me>" ]
readme = "README.md"
publish = false
build = "build.rs"

[dependencies]
web-view = "0.2.1"
serde_json = "1.0.31"
libc = "0.2.43"
hyper = "0.12.11"
reqwest = "0.9.2"

[build-dependencies]
html-minifier = "1.1.2"
base64 = "0.9.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.6", features = [ "shellapi", "wincrypt" ] }
user32-sys = "0.2.0"
winrt = { version = "0.5.1", features = [ "windows-data", "windows-ui" ] }
winrt-notification = "0.2.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.6"

[target.'cfg(unix)'.dependencies]
notify-rust = "3.4.2"
